[FIX] web: fix alignment issue in searchbar for the settings menu
Before this commit:
There is an alignment issue in the o_control_panel in
the mobile view.

After this commit:
We have added the responsive classes and remove the style
to fix the alignment issue.

Task: 3076254

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -936,10 +936,6 @@
     @include media-breakpoint-down(md) {
         .o_control_panel {
             padding-right: 16px;
-
-            > div.o_cp_top {
-                flex-flow: column;
-            }
         }
 
         .o_cp_buttons {
